<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="attendance_app_name">考勤</string>
    <string name="attendance_daka">打卡</string>
    <string name="attendance_data">统计</string>
    <string name="attendance_setting">设置</string>
    <string name="attendance_approve">审批</string>
    <string name="attendance_work_time_manage_title">排班管理</string>
    <string name="attendance_work_time_manage_title2">班次管理</string>
    <string name="attendance_work_time_detail_title2">班次详情</string>
    <string name="attendance_rules_manage_title">打卡规则</string>
    <string name="attendance_rules_mine_manage_title">考勤规则</string>
    <string name="attendance_add_work_schedule_title">添加班次</string>
    <string name="attendance_add_rules_title">规则设置</string>
    <string name="attendance_additional_setting_title">其他设置</string>
    <string name="attendance_add_rules_type_title">考勤类型</string>
    <string name="attendance_rules_fixed">固定班制</string>
    <string name="attendance_rules_arrange">排班制</string>
    <string name="attendance_rules_free_style">自由工时</string>
    <string name="attendance_official_holiday_auto_arrange">法定节假日自动排休</string>
    <string name="attendance_must_daka">必须打卡日期</string>
    <string name="attendance_can_not_daka">不用打卡日期</string>
    <string name="attendance_choose_location">选择办公地点</string>
    <string name="attendance_choose_wifi">选择办公WiFi</string>
    <string name="attendance_allow_beyond_range">允许外勤打卡</string>
    <string name="attendance_face_recognition">人脸识别打卡</string>
    <string name="attendance_start_time_title">考勤开始时间</string>
    <string name="attendance_add_location_title">地点</string>
    <string name="attendance_add_approval_title">添加审批单</string>
    <string name="attendance_add_wifi_title">添加Wi-Fi</string>
    <string name="attendance_monthly_data_title">打卡月历</string>
    <string name="attendance_work_schedule_nane_title">班次名称</string>
    <string name="attendance_work_schedule_nane_title_hint">请输入少于10个字名称</string>
    <string name="attendance_select_location_hint">请选择地址</string>
    <string name="attendance_work_time">上班</string>
    <string name="attendance_off_time">下班</string>
    <string name="attendance_rest_time">休息时间</string>
    <string name="attendance_rest_time_start">休息开始</string>
    <string name="attendance_rest_time_end">休息结束</string>
    <string name="attendance_view_member_num">打卡人数</string>
    <string name="attendance_type_title">考勤方式</string>
    <string name="attendance_view_range_title">排行榜</string>
    <string name="attendance_name_title">考勤名称</string>
    <string name="attendance_group_name_title">考勤组名称</string>
    <string name="attendance_group_must_title">考勤人员</string>
    <string name="attendance_group_not_title">无需考勤人员</string>
    <string name="attendance_add_approval_label">关联审批单</string>
    <string name="attendance_rules_label">规则%s</string>
    <string name="attendance_range_str">有效范围:%s米</string>
    <string name="attendance_work_time_item_title">考勤时间:%s</string>
    <string name="attendance_amend_state_label">修正状态</string>
    <string name="attendance_start_time_label">开始时间对应字段</string>
    <string name="attendance_patch_time_label">补卡时间对应字段</string>
    <string name="attendance_end_time_label">结束时间对应字段</string>
    <string name="attendance_duration_label">时长对应字段</string>
    <string name="attendance_duration_unit_label">时长计算单位</string>
    <string name="attendance_approval_hint">审批通过后，该时间段内的考勤“缺卡”状态将会被自动修正为“正常”</string>
    <string name="attendance_please_select_hint">请选择</string>
    <string name="attendance_location_title">考勤地址</string>
    <string name="attendance_range_title">有效范围</string>
    <string name="attendance_values_hint">请设置大于等于零整数</string>
    <string name="attendance_late_max_times_label">每人允许迟到次数</string>
    <string name="attendance_late_max_minute_label">单次允许迟到分钟数</string>
    <string name="attendance_late_to_absent_label">单次迟到超过分钟数记为旷工</string>
    <string name="attendance_leave_max_minute_label">单次早退超过分钟数记为旷工</string>
    <string name="attendance_leave_time">第一天下班晚走%d小时</string>
    <string name="attendance_arrival_time">第二天上班晚到%d小时</string>
    <string name="attendance_leave_arrival_time">第一天晚走%1$d小时,第二天晚到%2$d小时不算迟到</string>


    <string name="attendance_date_format1">yyyy年MM月dd日(EEEE) HH:mm</string>
    <string name="attendance_date_format2">yyyy年MM月dd日(EEEE)</string>
    <string name="attendance_check_rolus">查看规则</string>
    <string name="attendance_time_title">考勤时间</string>
    <string name="attendance_time_class">上下班时间</string>
    <string name="attendance_check_time_class">查看我的排班表</string>
    <string name="attendance_remine">打卡提醒</string>
    <string name="attendance_persion_rules">人性化规则</string>
    <string name="attendance_over_time">晚到晚走</string>
    <string name="attendance_persion_class">人性化班次</string>
    <string name="attendance_neglect_rules">矿工规则</string>
    <string name="attendance_range">考勤范围</string>
    <string name="attendance_work_location">办公地点</string>
    <string name="attendance_work_wifi">办公 WI-FI</string>
    <string name="attendance_class_time">班次</string>
    <string name="attendance_ontime_remine">上班提前 %1$d分钟,提醒员工打卡</string>
    <string name="attendance_overtime_remine">下班推迟 %1$d分钟,提醒员工打卡</string>
    <string name="attendance_late_go">第一天下班晚走 %1$d分钟,第二天晚到 %1$d分钟</string>
    <string name="attendance_persion_rule">每人允许迟到 %1$d次,每次允许迟到分钟数 %1$d分钟</string>
    <string name="attendance_neglect_late">单次迟到 %1$d分钟数记为旷工</string>
    <string name="attendance_neglect_ealer">单次早退 %1$d分钟数记为旷工</string>
    <string name="attendance_class_manager_title">班次管理</string>
    <string name="attendance_approval_title">关联审批</string>
    <string name="attendance_uinit_title">插件管理</string>
    <string name="attendance_add_rules">新增打卡规则</string>
    <string name="attendance_approve_records">审批记录</string>
    <string name="attendance_persion_num">参与考勤人数</string>
    <string name="attendance_late_num">迟到人数</string>
    <string name="attendance_earel_num">早退人数</string>
    <string name="attendance_leave_num">缺卡人数</string>
    <string name="attendance_quite_num">旷工人数</string>
    <string name="attendance_out_num">外勤人数</string>
    <string name="attendance_holi_num">请假</string>
    <string name="attendance_outwork_num">出差外出</string>
    <string name="attendance_clock_quick">急速打卡</string>
    <string name="attendance_clock_quick_tips">只需要在考勤时间段内打开app,系统就会帮你自动完成打卡</string>
    <string name="attendance_clock_manger">插件管理</string>

</resources>
