<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/default_app_backgroud_color">

    <include
        android:id="@+id/info"
        layout="@layout/attendance_change_days_layout"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/info">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <!--考勤时间-->
            <RelativeLayout
                android:id="@+id/rl_attentance_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/attendance_time_title"
                    android:textSize="18dp"
                    android:textColor="@color/app_blue"
                    />
                <ImageView
                    android:id="@+id/iv_attdance_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/arrows_flex_selector"
                    android:layout_alignParentRight="true"
                    />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/li_attentance_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:background="#F8FBFE"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/attendance_time_class"
                    android:textColor="@color/black_4a"
                    android:textSize="16dp"/>
                <TextView
                    android:id="@+id/check_class_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/attendance_check_time_class"
                    android:textColor="@color/link_color"
                    android:layout_marginTop="5dp"
                    />
                <TextView
                    android:id="@+id/class_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="班次:"
                    android:textColor="@color/gray_90"
                    android:layout_marginTop="5dp"
                    />

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/default_app_backgroud_color"/>

            <!--人性化打卡规则-->
            <RelativeLayout
                android:id="@+id/rl_attentance_rules"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:background="@color/white"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/attendance_persion_rules"
                    android:textSize="18dp"
                    android:textColor="@color/app_blue"
                    />
                <ImageView
                    android:id="@+id/iv_persion_rules"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/arrows_flex_selector"
                    android:layout_alignParentRight="true"
                    />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/li_attentance_rules"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:layout_marginTop="1dp"
                android:background="#F8FBFE">
                <!--打卡提醒-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/attendance_remine"
                    android:textColor="@color/black_4a"
                    android:textSize="16dp"/>
                <TextView
                    android:id="@+id/on_work_remine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray_90"
                    android:layout_marginTop="5dp"
                    />
                <TextView
                    android:id="@+id/over_work_remine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray_90"
                    android:layout_marginTop="5dp"
                    />

                <!--晚到晚走-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/attendance_over_time"
                    android:textColor="@color/black_4a"
                    android:textSize="16dp"
                    android:layout_marginTop="15dp"/>
                <TextView
                    android:id="@+id/over_time_rules"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray_90"
                    android:layout_marginTop="5dp"/>

                <!--人性化班次-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/attendance_persion_class"
                    android:textColor="@color/black_4a"
                    android:textSize="16dp"
                    android:layout_marginTop="15dp"/>
                <TextView
                    android:id="@+id/late_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray_90"
                    android:layout_marginTop="5dp"
                    />

                <!--旷工规则-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/attendance_neglect_rules"
                    android:textColor="@color/black_4a"
                    android:layout_marginTop="15dp"
                    android:textSize="16dp"/>
                <TextView
                    android:id="@+id/neglect_on_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray_90"
                    android:layout_marginTop="5dp"
                    />
                <TextView
                    android:id="@+id/neglect_over_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray_90"
                    android:layout_marginTop="5dp"
                    />

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/default_app_backgroud_color"/>
            <!--考勤范围-->

            <RelativeLayout
                android:id="@+id/rl_attentance_rangle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:background="@color/white"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/attendance_range"
                    android:textSize="18dp"
                    android:textColor="@color/app_blue"
                    />
                <ImageView
                    android:id="@+id/iv_range"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/arrows_flex_selector"
                    android:layout_alignParentRight="true"
                    />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/li_attentance_rangle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:layout_marginTop="1dp"
                android:background="#F8FBFE">
                 <!--办公地点-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/attendance_work_location"
                    android:textSize="16dp"
                    android:textColor="@color/black_4a"/>
                <TextView
                    android:id="@+id/work_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray_90"
                    android:layout_marginTop="5dp"
                    android:drawableLeft="@drawable/attendance_location"
                    />
                <!--办公wifi-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/attendance_work_wifi"
                    android:textColor="@color/black_4a"
                    android:layout_marginTop="15dp"
                    android:textSize="16dp"
                    />
                <TextView
                    android:id="@+id/work_wifi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray_90"
                    android:layout_marginTop="5dp"
                    android:drawableLeft="@drawable/attendance_wifi"
                    />
            </LinearLayout>


        </LinearLayout>


    </ScrollView>

</RelativeLayout>