<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/actionbar_ll"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@color/white"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/rl1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/iv1"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/attendance_daka_selected"/>

            <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv1"
                android:layout_centerHorizontal="true"
                android:text="@string/attendance_daka"
                android:textSize="12dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/iv2"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/attendance_approve_nomal"/>

            <TextView
                android:id="@+id/tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv2"
                android:layout_centerHorizontal="true"
                android:text="@string/attendance_approve"
                android:textSize="12dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/iv3"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/attendance_data_unselect"/>

            <TextView
                android:id="@+id/tv3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv3"
                android:layout_centerHorizontal="true"
                android:text="@string/attendance_data"
                android:textSize="12dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="gone">

            <ImageView
                android:id="@+id/iv4"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/attendance_setting_unselect"/>

            <TextView
                android:id="@+id/tv4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv4"
                android:layout_centerHorizontal="true"
                android:text="@string/attendance_setting"
                android:textSize="12dp"/>

        </RelativeLayout>


    </LinearLayout>

    <View
        android:id="@+id/divider_view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/actionbar_ll"
        android:background="@color/gray_c8"/>

    <com.hjhq.teamface.common.view.NoScrollViewPager
        android:id="@+id/main_vp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/divider_view">

    </com.hjhq.teamface.common.view.NoScrollViewPager>
</RelativeLayout>