<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/default_app_backgroud_color">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rl_project_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:minHeight="60dp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/star"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:text="*"
                    android:textColor="@color/red"
                    android:textSize="14dp"/>

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="10dp"
                    android:layout_toRightOf="@+id/star"
                    android:text="@string/attendance_work_schedule_nane_title"
                    android:textColor="#333333"
                    android:textSize="16dp"
                    android:visibility="visible"/>

                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@+id/tv_name"
                    android:background="@color/white"
                    android:gravity="center_vertical"
                    android:hint="@string/attendance_work_schedule_nane_title_hint"
                    android:maxLength="10"
                    android:maxLines="3"
                    android:padding="10dp"
                    android:textSize="16dp"/>


            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/default_app_backgroud_color"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"

                android:background="@color/white">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:text="@string/attendance_add_rules_type_title"
                    android:textColor="#333333"
                    android:textSize="16dp"/>

                <RadioGroup
                    android:id="@+id/radio_group"
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="15dp"
                    android:background="@color/white"
                    android:orientation="horizontal"
                    android:paddingLeft="15dp"
                    android:paddingTop="10dp">

                    <RadioButton
                        android:id="@+id/rb1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/attendance_radio1_selector"
                        android:button="@null"
                        android:checked="true"
                        android:gravity="center"
                        android:paddingBottom="5dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingTop="5dp"
                        android:text="@string/attendance_rules_fixed"
                        android:textColor="@drawable/attendance_radio_text_color_selector"/>

                    <RadioButton
                        android:id="@+id/rb2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/attendance_radio2_selector"
                        android:button="@null"
                        android:paddingBottom="5dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingTop="5dp"
                        android:text="@string/attendance_rules_arrange"
                        android:textColor="@drawable/attendance_radio_text_color_selector"/>

                    <RadioButton
                        android:id="@+id/rb3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/attendance_radio3_selector"
                        android:button="@null"
                        android:paddingBottom="5dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingTop="5dp"
                        android:text="@string/attendance_rules_free_style"
                        android:textColor="@drawable/attendance_radio_text_color_selector"/>

                </RadioGroup>
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_rules_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingBottom="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="3dp"
                android:text="每天考勤时间一样，适用于:IT、金融、文化1传媒、政府、事业单位、教育培训等行业"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/default_app_backgroud_color"/>

            <LinearLayout
                android:id="@+id/rl_can"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <include
                    android:id="@+id/type1"
                    layout="@layout/attendance_rules_type1"
                    android:visibility="visible"/>

                <include
                    android:id="@+id/type2"
                    layout="@layout/attendance_rules_type2"
                    android:visibility="gone"/>

                <include
                    android:id="@+id/type3"
                    layout="@layout/attendance_rules_type3"
                    android:visibility="gone"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_can"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"/>

            <RelativeLayout
                android:id="@+id/rl14"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_below="@+id/rl_remind_time"
                android:background="@color/white">

                <TextView
                    android:id="@+id/tv15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:text="@string/attendance_allow_beyond_range"
                    android:textColor="#333333"
                    android:textSize="16dp"/>

                <com.kyleduo.switchbutton.SwitchButton
                    android:id="@+id/sb11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="15dp"
                    android:checked="false"
                    app:kswAnimationDuration="300"
                    app:kswBackDrawable="@drawable/ios_back_drawable"
                    app:kswBackMeasureRatio="1.4"
                    app:kswThumbDrawable="@drawable/ios_thumb_selector"
                    app:kswThumbMarginBottom="-8dp"
                    app:kswThumbMarginLeft="-5dp"
                    app:kswThumbMarginRight="-5dp"
                    app:kswThumbMarginTop="-2.5dp"/>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/default_app_backgroud_color"/>

            <RelativeLayout
                android:id="@+id/rl15"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_below="@+id/rl_remind_time"
                android:background="@color/white"
                android:visibility="visible">

                <TextView
                    android:id="@+id/tv_mode_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:text="@string/attendance_face_recognition"
                    android:textColor="#333333"
                    android:textSize="16dp"/>

                <com.kyleduo.switchbutton.SwitchButton
                    android:id="@+id/sb12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="15dp"
                    android:checked="false"
                    app:kswAnimationDuration="300"
                    app:kswBackDrawable="@drawable/ios_back_drawable"
                    app:kswBackMeasureRatio="1.4"
                    app:kswThumbDrawable="@drawable/ios_thumb_selector"
                    app:kswThumbMarginBottom="-8dp"
                    app:kswThumbMarginLeft="-5dp"
                    app:kswThumbMarginRight="-5dp"
                    app:kswThumbMarginTop="-2.5dp"/>

            </RelativeLayout>

        </LinearLayout>


    </ScrollView>

</RelativeLayout>